2011-12-16  MIYAMUKO Katsuyuki

	* (scan-json-string-internal): 不正なエスケープシーケンスがあったら
	エラーにするようにした

2011-12-15  MIYAMUKO Katsuyuki

	* (json-syntax-check-buffer, json-syntax-check-region): JSON の構文チェック
	をするコマンドを追加

	* (json-decode): 文字列先頭の空白文字は無視するようにした
	(json-decode " [1]") ;;=> (1)

	* (json-decode-buffer): バッファの内容を JSON としてパースする API を追加 (#5)
	https://github.com/miyamuko/xl-json/issues/5

	* (json-decode-file, json-parse-error): エラーが発生した行番号と
	カラム番号とファイル名 (json-decode-file の場合) を表示するようにした (#6)
	https://github.com/miyamuko/xl-json/issues/6

	* (parse-json-number): most-positive-single-float 以上で
	most-positive-double-float 未満の数値をパースできるように修正

	* (json-decode-file): ファイルを相対パスで指定した場合、
	カレントバッファのデフォルトディレクトリからの相対パスで
	ファイルを開く用にした

2011-07-28  MIYAMUKO Katsuyuki

	* (save-current-buffer): with-set-buffer してから現在のバッファを
	保存するようにした (#4)
	https://github.com/miyamuko/xl-json/issues/4

2010-08-07  MIYAMUKO Katsuyuki

	* (json-key-p): 指定されたキーが json オブジェクトのキーなら t を返す。
	---
	(let ((json (json:json-decode (xhr:xhr-get "http://b.hatena.ne.jp/entry/json/http://common-lisp.net/project/cl-json/"
	                                           :key 'xhr:xhr-response-text))))
          (json:json-key-p json "count") ;;=> t
          (json:json-key-p json "hoge")) ;;=> nil

2010-08-06  MIYAMUKO Katsuyuki

	* (json-object-keys): 指定した json オブジェクトのキーを取得する。
	json オブジェクトじゃない場合は type-error。
	---
	(let ((json (json:json-decode (xhr:xhr-get "http://b.hatena.ne.jp/entry/json/http://common-lisp.net/project/cl-json/"
	                                           :key 'xhr:xhr-response-text))))
	  (json:json-object-keys json))
	;;=> ("related" "count" "url" "bookmarks" "title" "eid" "entry_url" "screenshot")

	* (json-value): 指定したキーの json データを取得する。
	json-values は複数のキーを指定して多値で取得する関数だが
	json-value はひとつのキーを指定してひとつの値を取得する関数。
	---
	(let ((json (json:json-decode (xhr:xhr-get "http://b.hatena.ne.jp/entry/json/http://common-lisp.net/project/cl-json/"